# tooli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE_v3.md  MIGRATION_GUIDE_v4.md  MIGRATION_GUIDE_v5.md  PLAN.md  PRD.md  PRD_v3.md  PRD_v4.1.md  PRD_v4.md  PRD_v5.md  PRD_v6.md  README.md  RELEASE_CHECKLIST.md  llms.txt  pyproject.toml  ruff.toml  scenarios_cc.md  scenarios_cdx.md  scenarios_combined.md  scenarios_final.md  scenarios_final_draft_1.md  scenarios_final_draft_2.md  scenarios_gm.md  scenarios_merged.md  tooli_third_party_resources.md
.github/workflows/: ci.yml  (+1 more)
PRDs/: PRD_draft1.md  PRD_draft2.md  PRD_draft3.md  PRD_draft4.md
docs/: AGENT_INTEGRATION.md  COOKBOOK_claude_code.md  COOKBOOK_mcp.md  COOKBOOK_migrating_from_typer.md  COOKBOOK_multi_framework_integration.md  COOKIECUTTER_TEMPLATE.md  GETTING_STARTED.md  MIGRATION_v5_to_v6.md
examples/: README.md  code_lens.py  log_sift.py  main.py  safe_patch.py  sqlite_probe.py
pypi/: pypi_project.md
red_team_assessments/: tooli_bloat_assessment.md  tooli_bloat_assessment_gm.md
scripts/: check_v11_hardening.py
tests/: conftest.py  test_agents_md.py  test_api.py  test_app.py  test_app_acall.py  test_app_call.py  test_app_native.py  test_app_stream.py  test_architecture.py  test_auth.py  test_caller_integration.py  test_capabilities_handoffs_field.py  test_claude_md_v2.py  test_cli.py  test_command_accessors.py  test_context.py  test_coverage.py  test_csvkit_t.py  test_detect.py  test_docq.py  test_docs.py  test_dry_run.py  test_envar.py  test_eval.py  test_export.py  test_gitsum.py  test_idempotency.py  test_imgsort.py  test_init.py  test_mcp.py  test_note_indexer.py  test_orchestration.py  test_otel.py  test_output_schema.py  test_pipes.py  test_proj.py  test_python_api.py  test_schema.py  test_secret_input.py  test_security.py  (+10 more)
tooli/: __init__.py  annotations.py  app.py  app_native.py  auth.py  bootstrap.py  cli.py  command.py  command_meta.py  config.py  context.py  detect.py  dry_run.py  envelope.py  errors.py  exit_codes.py  export.py  idempotency.py  init.py  input.py  manifest.py  orchestration.py  output.py  pagination.py  pipes.py  python_api.py  recorder.py  schema.py  telemetry.py  telemetry_pipeline.py  testing.py  transforms.py  upgrade.py  versioning.py
(+55 files in other folders)
